samples/_failures_safe/1761511335_967c21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec8bd702.c: In function ‘main’:
./samples/SAFE/__tmp_ec8bd702.c:152:33: error: expected ‘)’ at end of input
  152 |     for (int i = 0; i < edges; i
      |         ~                       ^
      |                                 )
./samples/SAFE/__tmp_ec8bd702.c:152:5: error: expected declaration or statement at end of input
  152 |     for (int i = 0; i < edges; i
      |     ^~~
